fix nav default wrapping behavior

--- a/src/scss/extensions/mg-display.scss
+++ b/src/scss/extensions/mg-display.scss
@@ -18,6 +18,10 @@
     display: inline-flex;
 }
 
+.mg-wrap {
+    flex-wrap: wrap;
+}
+
 .mg-none {
     display: none;
 }
